# cpp_works

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Source/: CMakeLists.txt  example.cpp  singleton.h
Source/Improved/: common_types.h  constants.h  data_wrapper.h  interfaces.h  lock_types.cpp  lock_types.h  queue_normal.h  thread_tracker.h
Source/Singletons/: future.cpp  future.h
Source/Utility/: random_generator.h
cmake/: CodeQuality.cmake  MSVCRuntime.cmake
